ParaCL/src/parser/parser.output
Terminals unused in grammar

   TERR


State 3 conflicts: 1 shift/reduce
State 28 conflicts: 2 shift/reduce
State 39 conflicts: 1 shift/reduce
State 84 conflicts: 2 shift/reduce
State 85 conflicts: 2 shift/reduce
State 86 conflicts: 2 shift/reduce
State 87 conflicts: 2 shift/reduce
State 109 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: %empty
    2                 | statement_list

    3 block: '{' '}'

    4 $@1: %empty

    5 block: '{' $@1 statement_list '}'

    6 statement_list: statement
    7               | statement_list statement

    8 statement: matched_statement
    9          | open_statement

   10 matched_statement: expression ';'
   11                  | error ';'
   12                  | expression
   13                  | TIF '(' expression ')' matched_statement TELSE matched_statement
   14                  | iteration_statement
   15                  | TOUTPUT expression ';'
   16                  | TOUTPUT expression error
   17                  | function_declaration
   18                  | function_declaration ';'
   19                  | TRETURN expression ';'

   20 open_statement: TIF '(' expression ')' statement
   21               | TIF '(' expression ')' matched_statement TELSE open_statement

   22 $@2: %empty

   23 function_declaration: TID TASSIGN TFUNC '(' arguments ')' name_form '{' $@2 func_body '}'

   24 func_body: statement_list
   25          | %empty

   26 arguments: %empty
   27          | arguments_list

   28 arguments_list: TID
   29               | arguments_list ',' TID

   30 name_form: %empty
   31          | ':' TID

   32 iteration_statement: TWHILE '(' expression ')' statement
   33                    | TWHILE '(' expression error statement
   34                    | TWHILE error expression ')' statement

   35 expression: assignment_expression

   36 assignment_expression: logical_or_expression
   37                      | TID TASSIGN logical_or_expression

   38 logical_or_expression: logical_and_expression
   39                      | logical_or_expression TOR logical_and_expression

   40 logical_and_expression: equality_expression
   41                       | logical_and_expression TAND equality_expression

   42 equality_expression: relational_expression
   43                    | equality_expression TEQUAL relational_expression
   44                    | equality_expression TNEQUAL relational_expression

   45 relational_expression: additive_expression
   46                      | relational_expression TLESS additive_expression
   47                      | relational_expression TGR additive_expression
   48                      | relational_expression TLESS_EQ additive_expression
   49                      | relational_expression TGR_EQ additive_expression

   50 additive_expression: multiplicative_expression
   51                    | additive_expression TADD multiplicative_expression
   52                    | additive_expression TSUB multiplicative_expression

   53 multiplicative_expression: unary_expression
   54                          | multiplicative_expression TMUL unary_expression
   55                          | multiplicative_expression TDIV unary_expression
   56                          | multiplicative_expression TPERCENT unary_expression

   57 unary_expression: primary_expression
   58                 | TADD unary_expression
   59                 | TSUB unary_expression
   60                 | TEXCLAM unary_expression

   61 primary_expression: TID
   62                   | function_call
   63                   | TNUM
   64                   | TINPUT
   65                   | '(' expression ')'
   66                   | block

   67 function_call: TID '(' call_arguments ')'

   68 call_arguments: %empty
   69               | expression_list

   70 expression_list: expression
   71                | expression_list ',' expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 20 21 23 32 33 65 67
')' (41) 13 20 21 23 32 34 65 67
',' (44) 29 71
':' (58) 31
';' (59) 10 11 15 18 19
'{' (123) 3 5 23
'}' (125) 3 5 23
error (256) 11 16 33 34
TNUM (258) 63
TID (259) 23 28 29 31 37 61 67
TWHILE (260) 32 33 34
TIF (261) 13 20 21
TOR (262) 39
TAND (263) 41
TLESS (264) 46
TGR (265) 47
TLESS_EQ (266) 48
TGR_EQ (267) 49
TEQUAL (268) 43
TNEQUAL (269) 44
TADD (270) 51 58
TSUB (271) 52 59
TMUL (272) 54
TDIV (273) 55
TINPUT (274) 64
TOUTPUT (275) 15 16
TASSIGN (276) 23 37
TEXCLAM (277) 60
TPERCENT (278) 56
TELSE (279) 13 21
TRETURN (280) 19
TFUNC (281) 23
TERR (282)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
translation_unit (36)
    on left: 1 2, on right: 0
block (37)
    on left: 3 5, on right: 66
$@1 (38)
    on left: 4, on right: 5
statement_list (39)
    on left: 6 7, on right: 2 5 7 24
statement (40)
    on left: 8 9, on right: 6 7 20 32 33 34
matched_statement (41)
    on left: 10 11 12 13 14 15 16 17 18 19, on right: 8 13 21
open_statement (42)
    on left: 20 21, on right: 9 21
function_declaration (43)
    on left: 23, on right: 17 18
$@2 (44)
    on left: 22, on right: 23
func_body (45)
    on left: 24 25, on right: 23
arguments (46)
    on left: 26 27, on right: 23
arguments_list (47)
    on left: 28 29, on right: 27 29
name_form (48)
    on left: 30 31, on right: 23
iteration_statement (49)
    on left: 32 33 34, on right: 14
expression (50)
    on left: 35, on right: 10 12 13 15 16 19 20 21 32 33 34 65 70 71
assignment_expression (51)
    on left: 36 37, on right: 35
logical_or_expression (52)
    on left: 38 39, on right: 36 37 39
logical_and_expression (53)
    on left: 40 41, on right: 38 39 41
equality_expression (54)
    on left: 42 43 44, on right: 40 41 43 44
relational_expression (55)
    on left: 45 46 47 48 49, on right: 42 43 44 46 47 48 49
additive_expression (56)
    on left: 50 51 52, on right: 45 46 47 48 49 51 52
multiplicative_expression (57)
    on left: 53 54 55 56, on right: 50 51 52 54 55 56
unary_expression (58)
    on left: 57 58 59 60, on right: 53 54 55 56 58 59 60
primary_expression (59)
    on left: 61 62 63 64 65 66, on right: 57
function_call (60)
    on left: 67, on right: 62
call_arguments (61)
    on left: 68 69, on right: 67
expression_list (62)
    on left: 70 71, on right: 69 71


State 0

    0 $accept: . translation_unit $end

    error    shift, and go to state 1
    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TWHILE   shift, and go to state 4
    TIF      shift, and go to state 5
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TOUTPUT  shift, and go to state 9
    TEXCLAM  shift, and go to state 10
    TRETURN  shift, and go to state 11
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    $end  reduce using rule 1 (translation_unit)

    translation_unit           go to state 14
    block                      go to state 15
    statement_list             go to state 16
    statement                  go to state 17
    matched_statement          go to state 18
    open_statement             go to state 19
    function_declaration       go to state 20
    iteration_statement        go to state 21
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 1

   11 matched_statement: error . ';'

    ';'  shift, and go to state 33


State 2

   63 primary_expression: TNUM .

    $default  reduce using rule 63 (primary_expression)


State 3

   23 function_declaration: TID . TASSIGN TFUNC '(' arguments ')' name_form '{' $@2 func_body '}'
   37 assignment_expression: TID . TASSIGN logical_or_expression
   61 primary_expression: TID .
   67 function_call: TID . '(' call_arguments ')'

    TASSIGN  shift, and go to state 34
    '('      shift, and go to state 35

    '('       [reduce using rule 61 (primary_expression)]
    $default  reduce using rule 61 (primary_expression)


State 4

   32 iteration_statement: TWHILE . '(' expression ')' statement
   33                    | TWHILE . '(' expression error statement
   34                    | TWHILE . error expression ')' statement

    error  shift, and go to state 36
    '('    shift, and go to state 37


State 5

   13 matched_statement: TIF . '(' expression ')' matched_statement TELSE matched_statement
   20 open_statement: TIF . '(' expression ')' statement
   21               | TIF . '(' expression ')' matched_statement TELSE open_statement

    '('  shift, and go to state 38


State 6

   58 unary_expression: TADD . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block               go to state 15
    unary_expression    go to state 40
    primary_expression  go to state 31
    function_call       go to state 32


State 7

   59 unary_expression: TSUB . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block               go to state 15
    unary_expression    go to state 41
    primary_expression  go to state 31
    function_call       go to state 32


State 8

   64 primary_expression: TINPUT .

    $default  reduce using rule 64 (primary_expression)


State 9

   15 matched_statement: TOUTPUT . expression ';'
   16                  | TOUTPUT . expression error

    TNUM     shift, and go to state 2
    TID      shift, and go to state 42
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    expression                 go to state 43
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 10

   60 unary_expression: TEXCLAM . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block               go to state 15
    unary_expression    go to state 44
    primary_expression  go to state 31
    function_call       go to state 32


State 11

   19 matched_statement: TRETURN . expression ';'

    TNUM     shift, and go to state 2
    TID      shift, and go to state 42
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    expression                 go to state 45
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 12

    3 block: '{' . '}'
    5      | '{' . $@1 statement_list '}'

    '}'  shift, and go to state 46

    $default  reduce using rule 4 ($@1)

    $@1  go to state 47


State 13

   65 primary_expression: '(' . expression ')'

    TNUM     shift, and go to state 2
    TID      shift, and go to state 42
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    expression                 go to state 48
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 14

    0 $accept: translation_unit . $end

    $end  shift, and go to state 49


State 15

   66 primary_expression: block .

    $default  reduce using rule 66 (primary_expression)


State 16

    2 translation_unit: statement_list .
    7 statement_list: statement_list . statement

    error    shift, and go to state 1
    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TWHILE   shift, and go to state 4
    TIF      shift, and go to state 5
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TOUTPUT  shift, and go to state 9
    TEXCLAM  shift, and go to state 10
    TRETURN  shift, and go to state 11
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    $end  reduce using rule 2 (translation_unit)

    block                      go to state 15
    statement                  go to state 50
    matched_statement          go to state 18
    open_statement             go to state 19
    function_declaration       go to state 20
    iteration_statement        go to state 21
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 17

    6 statement_list: statement .

    $default  reduce using rule 6 (statement_list)


State 18

    8 statement: matched_statement .

    $default  reduce using rule 8 (statement)


State 19

    9 statement: open_statement .

    $default  reduce using rule 9 (statement)


State 20

   17 matched_statement: function_declaration .
   18                  | function_declaration . ';'

    ';'  shift, and go to state 51

    $default  reduce using rule 17 (matched_statement)


State 21

   14 matched_statement: iteration_statement .

    $default  reduce using rule 14 (matched_statement)


State 22

   10 matched_statement: expression . ';'
   12                  | expression .

    ';'  shift, and go to state 52

    $default  reduce using rule 12 (matched_statement)


State 23

   35 expression: assignment_expression .

    $default  reduce using rule 35 (expression)


State 24

   36 assignment_expression: logical_or_expression .
   39 logical_or_expression: logical_or_expression . TOR logical_and_expression

    TOR  shift, and go to state 53

    $default  reduce using rule 36 (assignment_expression)


State 25

   38 logical_or_expression: logical_and_expression .
   41 logical_and_expression: logical_and_expression . TAND equality_expression

    TAND  shift, and go to state 54

    $default  reduce using rule 38 (logical_or_expression)


State 26

   40 logical_and_expression: equality_expression .
   43 equality_expression: equality_expression . TEQUAL relational_expression
   44                    | equality_expression . TNEQUAL relational_expression

    TEQUAL   shift, and go to state 55
    TNEQUAL  shift, and go to state 56

    $default  reduce using rule 40 (logical_and_expression)


State 27

   42 equality_expression: relational_expression .
   46 relational_expression: relational_expression . TLESS additive_expression
   47                      | relational_expression . TGR additive_expression
   48                      | relational_expression . TLESS_EQ additive_expression
   49                      | relational_expression . TGR_EQ additive_expression

    TLESS     shift, and go to state 57
    TGR       shift, and go to state 58
    TLESS_EQ  shift, and go to state 59
    TGR_EQ    shift, and go to state 60

    $default  reduce using rule 42 (equality_expression)


State 28

   45 relational_expression: additive_expression .
   51 additive_expression: additive_expression . TADD multiplicative_expression
   52                    | additive_expression . TSUB multiplicative_expression

    TADD  shift, and go to state 61
    TSUB  shift, and go to state 62

    TADD      [reduce using rule 45 (relational_expression)]
    TSUB      [reduce using rule 45 (relational_expression)]
    $default  reduce using rule 45 (relational_expression)


State 29

   50 additive_expression: multiplicative_expression .
   54 multiplicative_expression: multiplicative_expression . TMUL unary_expression
   55                          | multiplicative_expression . TDIV unary_expression
   56                          | multiplicative_expression . TPERCENT unary_expression

    TMUL      shift, and go to state 63
    TDIV      shift, and go to state 64
    TPERCENT  shift, and go to state 65

    $default  reduce using rule 50 (additive_expression)


State 30

   53 multiplicative_expression: unary_expression .

    $default  reduce using rule 53 (multiplicative_expression)


State 31

   57 unary_expression: primary_expression .

    $default  reduce using rule 57 (unary_expression)


State 32

   62 primary_expression: function_call .

    $default  reduce using rule 62 (primary_expression)


State 33

   11 matched_statement: error ';' .

    $default  reduce using rule 11 (matched_statement)


State 34

   23 function_declaration: TID TASSIGN . TFUNC '(' arguments ')' name_form '{' $@2 func_body '}'
   37 assignment_expression: TID TASSIGN . logical_or_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    TFUNC    shift, and go to state 66
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    logical_or_expression      go to state 67
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 35

   67 function_call: TID '(' . call_arguments ')'

    TNUM     shift, and go to state 2
    TID      shift, and go to state 42
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    $default  reduce using rule 68 (call_arguments)

    block                      go to state 15
    expression                 go to state 68
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32
    call_arguments             go to state 69
    expression_list            go to state 70


State 36

   34 iteration_statement: TWHILE error . expression ')' statement

    TNUM     shift, and go to state 2
    TID      shift, and go to state 42
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    expression                 go to state 71
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 37

   32 iteration_statement: TWHILE '(' . expression ')' statement
   33                    | TWHILE '(' . expression error statement

    TNUM     shift, and go to state 2
    TID      shift, and go to state 42
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    expression                 go to state 72
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 38

   13 matched_statement: TIF '(' . expression ')' matched_statement TELSE matched_statement
   20 open_statement: TIF '(' . expression ')' statement
   21               | TIF '(' . expression ')' matched_statement TELSE open_statement

    TNUM     shift, and go to state 2
    TID      shift, and go to state 42
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    expression                 go to state 73
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 39

   61 primary_expression: TID .
   67 function_call: TID . '(' call_arguments ')'

    '('  shift, and go to state 35

    '('       [reduce using rule 61 (primary_expression)]
    $default  reduce using rule 61 (primary_expression)


State 40

   58 unary_expression: TADD unary_expression .

    $default  reduce using rule 58 (unary_expression)


State 41

   59 unary_expression: TSUB unary_expression .

    $default  reduce using rule 59 (unary_expression)


State 42

   37 assignment_expression: TID . TASSIGN logical_or_expression
   61 primary_expression: TID .
   67 function_call: TID . '(' call_arguments ')'

    TASSIGN  shift, and go to state 74
    '('      shift, and go to state 35

    $default  reduce using rule 61 (primary_expression)


State 43

   15 matched_statement: TOUTPUT expression . ';'
   16                  | TOUTPUT expression . error

    error  shift, and go to state 75
    ';'    shift, and go to state 76


State 44

   60 unary_expression: TEXCLAM unary_expression .

    $default  reduce using rule 60 (unary_expression)


State 45

   19 matched_statement: TRETURN expression . ';'

    ';'  shift, and go to state 77


State 46

    3 block: '{' '}' .

    $default  reduce using rule 3 (block)


State 47

    5 block: '{' $@1 . statement_list '}'

    error    shift, and go to state 1
    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TWHILE   shift, and go to state 4
    TIF      shift, and go to state 5
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TOUTPUT  shift, and go to state 9
    TEXCLAM  shift, and go to state 10
    TRETURN  shift, and go to state 11
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    statement_list             go to state 78
    statement                  go to state 17
    matched_statement          go to state 18
    open_statement             go to state 19
    function_declaration       go to state 20
    iteration_statement        go to state 21
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 48

   65 primary_expression: '(' expression . ')'

    ')'  shift, and go to state 79


State 49

    0 $accept: translation_unit $end .

    $default  accept


State 50

    7 statement_list: statement_list statement .

    $default  reduce using rule 7 (statement_list)


State 51

   18 matched_statement: function_declaration ';' .

    $default  reduce using rule 18 (matched_statement)


State 52

   10 matched_statement: expression ';' .

    $default  reduce using rule 10 (matched_statement)


State 53

   39 logical_or_expression: logical_or_expression TOR . logical_and_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    logical_and_expression     go to state 80
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 54

   41 logical_and_expression: logical_and_expression TAND . equality_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    equality_expression        go to state 81
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 55

   43 equality_expression: equality_expression TEQUAL . relational_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    relational_expression      go to state 82
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 56

   44 equality_expression: equality_expression TNEQUAL . relational_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    relational_expression      go to state 83
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 57

   46 relational_expression: relational_expression TLESS . additive_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    additive_expression        go to state 84
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 58

   47 relational_expression: relational_expression TGR . additive_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    additive_expression        go to state 85
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 59

   48 relational_expression: relational_expression TLESS_EQ . additive_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    additive_expression        go to state 86
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 60

   49 relational_expression: relational_expression TGR_EQ . additive_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    additive_expression        go to state 87
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 61

   51 additive_expression: additive_expression TADD . multiplicative_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    multiplicative_expression  go to state 88
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 62

   52 additive_expression: additive_expression TSUB . multiplicative_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    multiplicative_expression  go to state 89
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 63

   54 multiplicative_expression: multiplicative_expression TMUL . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block               go to state 15
    unary_expression    go to state 90
    primary_expression  go to state 31
    function_call       go to state 32


State 64

   55 multiplicative_expression: multiplicative_expression TDIV . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block               go to state 15
    unary_expression    go to state 91
    primary_expression  go to state 31
    function_call       go to state 32


State 65

   56 multiplicative_expression: multiplicative_expression TPERCENT . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block               go to state 15
    unary_expression    go to state 92
    primary_expression  go to state 31
    function_call       go to state 32


State 66

   23 function_declaration: TID TASSIGN TFUNC . '(' arguments ')' name_form '{' $@2 func_body '}'

    '('  shift, and go to state 93


State 67

   37 assignment_expression: TID TASSIGN logical_or_expression .
   39 logical_or_expression: logical_or_expression . TOR logical_and_expression

    TOR  shift, and go to state 53

    $default  reduce using rule 37 (assignment_expression)


State 68

   70 expression_list: expression .

    $default  reduce using rule 70 (expression_list)


State 69

   67 function_call: TID '(' call_arguments . ')'

    ')'  shift, and go to state 94


State 70

   69 call_arguments: expression_list .
   71 expression_list: expression_list . ',' expression

    ','  shift, and go to state 95

    $default  reduce using rule 69 (call_arguments)


State 71

   34 iteration_statement: TWHILE error expression . ')' statement

    ')'  shift, and go to state 96


State 72

   32 iteration_statement: TWHILE '(' expression . ')' statement
   33                    | TWHILE '(' expression . error statement

    error  shift, and go to state 97
    ')'    shift, and go to state 98


State 73

   13 matched_statement: TIF '(' expression . ')' matched_statement TELSE matched_statement
   20 open_statement: TIF '(' expression . ')' statement
   21               | TIF '(' expression . ')' matched_statement TELSE open_statement

    ')'  shift, and go to state 99


State 74

   37 assignment_expression: TID TASSIGN . logical_or_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 39
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 12
    '('      shift, and go to state 13

    block                      go to state 15
    logical_or_expression      go to state 67
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 75

   16 matched_statement: TOUTPUT expression error .

    $default  reduce using rule 16 (matched_statement)


State 76

   15 matched_statement: TOUTPUT expression ';' .

    $default  reduce using rule 15 (matched_statement)


State 77

   19 matched_statement: TRETURN expression ';' .

    $default  reduce using rule 19 (matched_statement)


State 78

    5 block: '{' $@1 statement_list . '}'
    7 statement_list: statement_list . statement

    error    shift, and go to state 1
    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TWHILE   shift, and go to state 4
    TIF      shift, and go to state 5
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TOUTPUT  shift, and go to state 9
    TEXCLAM  shift, and go to state 10
    TRETURN  shift, and go to state 11
    '{'      shift, and go to state 12
    '}'      shift, and go to state 100
    '('      shift, and go to state 13

    block                      go to state 15
    statement                  go to state 50
    matched_statement          go to state 18
    open_statement             go to state 19
    function_declaration       go to state 20
    iteration_statement        go to state 21
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    primary_expression         go to state 31
    function_call              go to state 32


State 79

   65 primary_expression: '(' expression ')' .

    $default  reduce using rule 65 (primary_expression)


State 80

   39 logical_or_expression: logical_or_expression TOR logical_and_expression .
   41 logical_and_expression: logical_and_expression . TAND equality_expression

    TAND  shift, and go to state 54

    $default  reduce using rule 39 (logical_or_expression)


State 81
